--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
             <p class="section-subtitle">Be Inspired</p>
 
-            <h1 class="h1 hero-title">Snap, Discover and Sho</h1>
+            <h1 class="h1 hero-title">Snap, Discover and Shop</h1>
 
             <p class="section-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu ut labore et
