--- a/index.html
+++ b/index.html
@@ -103,9 +103,8 @@
             <h1 class="h1 hero-title">Snap, Discover and Shop</h1>
 
             <p class="section-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu ut labore et
-              dolore magna
-              aliqua. Ut enim ad minim veniamquis nostrud
+              Explore a world where discovery meets convenience. Our platform revolutionizes 
+              the way you shop, seamlessly merging inspiration and effortless purchasing
             </p>
 
             <ul class="btn-list">
@@ -160,7 +159,7 @@
                 <h3 class="h3 card-title">Cutting Edge Image Search</h3>
 
                 <p class="card-text">
-                  Lorem ipsum dolor sit cons ectetur adipiscing
+                  Ground breaking product identification technology.
                 </p>
 
               </div>
@@ -176,7 +175,7 @@
                 <h3 class="h3 card-title">Visual Discovery Engine</h3>
 
                 <p class="card-text">
-                  Lorem ipsum dolor sit cons ectetur adipiscing
+                  Dynamic platform for exploring and discovering visually.
                 </p>
 
               </div>
@@ -189,10 +188,10 @@
                   <ion-icon name="settings-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h3 card-title">Personalized Content Tailoring</h3>
+                <h3 class="h3 card-title">Tailored content</h3>
 
                 <p class="card-text">
-                  Lorem ipsum dolor sit cons ectetur adipiscing
+                  Content customized to individual preferences
                 </p>
 
               </div>
@@ -205,10 +204,10 @@
                   <ion-icon name="cube-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h3 card-title">Seamless Shopping Integration</h3>
+                <h3 class="h3 card-title">Seamless Purchase Integration</h3>
 
                 <p class="card-text">
-                  Lorem ipsum dolor sit cons ectetur adipiscing
+                  Effortless blending of shopping elements for a smooth experience.
                 </p>
 
               </div>
@@ -239,13 +238,11 @@
 
             <p class="section-subtitle">Functionalaity</p>
 
-            <h2 class="h2 section-title">Image Search Made More Functional</h2>
+            <h2 class="h2 section-title">Snap and Find, EASY AS THAT</h2>
 
             <p class="section-text">
-              Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Ut elit tellus, luc tus nec ullamcorper mattis,
-              pulvinar
-              dapibus leo. Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Ut elit tellus, luc tus nec ullam
-              corpe
+              Harnesses the power of advanced image search. 
+              Seamlessly discover products visually, ensuring an intuitive and delightful shopping experience like never before.
             </p>
 
             <ul class="about-list">
@@ -257,11 +254,11 @@
                 </div>
 
                 <div>
-                  <h3 class="h3 item-title">Functional UI</h3>
+                  <h3 class="h3 item-title">Its Intuitive</h3>
 
                   <p class="item-text">
-                    Lorem ipsum dolor sit amet, consec tetur adipiscing elit Lorem ipsum dolor sit amet, consec tetur
-                    adipiscing elit.
+                    A user-friendly and easily navigable platform where you can effortlessly find, 
+                    explore, and purchase products with minimal effort or confusion. 
                   </p>
                 </div>
 
@@ -274,11 +271,11 @@
                 </div>
 
                 <div>
-                  <h3 class="h3 item-title">Easy to Use</h3>
+                  <h3 class="h3 item-title">Its FAST!</h3>
 
                   <p class="item-text">
-                    Lorem ipsum dolor sit amet, consec tetur adipiscing elit Lorem ipsum dolor sit amet, consec tetur
-                    adipiscing elit.
+                    Discover instantly with our image search—swift, accurate, and hassle-free. 
+                    Redefine your shopping experience; you owe yourself that.
                   </p>
                 </div>
 
