--- a/index.html
+++ b/index.html
@@ -308,16 +308,14 @@
             <h2 class="h2 section-title">Beautiful Layout & Easy To Navigate</h2>
 
             <p class="section-text">
-              Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Ut elit tellus, luc tus nec ullamcorper mattis,
-              pulvinar
-              dapibus leo. Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Ut elit tellus, luc tus nec ullam
-              corper.
+              Escape the monotony of soulless online shopping. Say goodbye to intrusive ads and relentless promos.
+               Shelfy offers a unique design, allowing you to organically scroll through our UI, free from pressure.
             </p>
 
             <p class="section-text">
-              Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Ut elit tellus, luc tus nec ullamcorper mattis,
-              pulvinar
-              dapibus leo. Lorem ipsum dolor.
+              Our UI features a visually engaging grid layout, emphasizing images in a clean and organized design. 
+              You can explore content through infinite scrolling, personalized feeds, and themed windows. The interface is intuitive, 
+              with a focus on simplicity, enabling seamless exploration and discovery while fostering a sense of personalization.
             </p>
 
             <a href="#" class="btn btn-secondary">Discover More</a>
@@ -354,9 +352,8 @@
             <h2 class="h2 section-title">Get The App For Free And Start Now</h2>
 
             <p class="section-text">
-              Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Ut elit tellus, luc tus nec ullamcorper mattis,
-              pulvinar
-              dapibus leo. Lorem ipsum dolor sit amet con Lorem ipsum dolor
+              Unlock endless inspiration! Download our app for free and dive into a world of discovery.
+               Start your journey now, effortlessly exploring ideas that spark your creativity. Ready, set, go!
             </p>
 
             <ul class="btn-list">
@@ -531,12 +528,12 @@
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">SHELFY</a>
+          <a href="#" class="logo">
+            <img src="./assets/images/Shelfy 30.png" width="300" height="40" alt="app store" class="img">
+          </a>
 
           <p class="section-text">
-            Duis cursus, mi quis viverra ornare, eros dolor interdum nulla utimp erdiet commodo diam libero vitae nibh
-            et jus cursus
-            id rutrum lore imperdiet ut sem vitae risus tristique posuere
+            Find us through any of our social media handles
           </p>
 
           <ul class="social-list">
